# bayespp

./: .gitignore  LICENSE  Readme.md
include/bayespp/: BayesPP.hpp  aqfn_exp_improvement.hpp  bayes.hpp  matern52.hpp  nlml_opt.hpp  param_space.hpp  vgrad.hpp
include/bayespp/detail/: aqfn_exp_improvement.hpp  bayes.hpp  matern52.hpp  nlml_opt.hpp  param_space.hpp  rbf.hpp
test/: CMakeLists.txt  main.cpp
